[package]
name = "bevy_latency"
version = "0.1.0"
edition = "2021"

[patch."https://github.com/bevyengine/bevy"]
#bevy = { git = "https://github.com/aevyrie/bevy", branch = "main" }

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", version = "0.5" }
bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", branch = "master" }
spin_sleep = "1.0"

[features]
trace_chrome = ["bevy/trace_chrome"]
